kubernetes/media/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 568
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:v2.17.0-ls223
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
