kubernetes/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/name: tautulli
spec:
  ports:
    - name: http
      port: 8181
      targetPort: http
  selector:
    app.kubernetes.io/name: tautulli
