kubernetes/media/tautulli/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.home.mcnees.me`) || Host(`tautulli-k8s.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: tautulli
          port: 8181
  tls:
    secretName: legacy-home-wildcard-tls
